# allreduce-bench

./: Allreduce-bench.ipynb  CMakeLists.txt  LICENSE  README.md  main.cpp  mpi_util.cpp  mpi_util.h  mpinvcc.sh  util.h
cmake/: baidu.cmake  gloo.cmake  mpi.cmake  nccl.cmake  pfnproto-rabenseifner.cmake  pfnproto-ring.cmake  pscl-rabenseifner.cmake  pscl-ring.cmake  pscl.cmake
targets/: baidu.h  gloo.h  mpi.h  nccl.h  pfnproto-rabenseifner.h  pfnproto-ring.h  pscl-rabenseifner.h  pscl-ring.h  pscl.h
